--- a/web_search_date_range/static/description/index.html
+++ b/web_search_date_range/static/description/index.html
@@ -5,7 +5,7 @@
             Setup your date range filters through the web interface.
             (Settings / Technical / User Interface / Date Filters)
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="range_filters.png">
+                <img src="date_filters.png">
             </div>
         </div>
         <div class="oe_span12">
